--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
             {
               title: "Company name",
             },
+            {
+              title: "Company rating",
+              children: [{ title: "Last year" }, { title: "This year" }],
+            },
           ],
         },
         {
@@ -126,6 +130,8 @@
           "423",
           "Moscow",
           "RosPotrebNadzor",
+          "4.5",
+          "4.6",
           "Male",
         ],
       ],
